force-app/main/default/objects/Order_Item__c/fields/Garment_Type__c.field-meta.xml
<CustomField>
    <fullName>Garment_Type__c</fullName>
    <label>Garment Type</label>
    <type>Picklist</type>
    <valueSet>
    <valueSetDefinition>
        <value><fullName>Shirt</fullName></value>
        <value><fullName>Pants</fullName></value>
        <value><fullName>Dress</fullName></value>
        <value><fullName>Suit</fullName></value>
        <value><fullName>Blanket</fullName></value>
        <value><fullName>Curtain</fullName></value>
    </valueSetDefinition>
</valueSet>

</CustomField>