force-app/main/default/objects/Order_Item__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>Quantity</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>0</scale>

</CustomField>