force-app/main/default/objects/Order_Item__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Lookup</type>
    <referenceTo>Service_Type__c</referenceTo>
    <relationshipName>ServiceType</relationshipName>

</CustomField>