force-app/main/default/objects/Order_Item__c/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <label>Total Price</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <formula>IF( ISBLANK(Quantity__c), 0, Quantity__c ) * IF( ISBLANK(Unit_Price__c), 0, Unit_Price__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>

</CustomField>